--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="css/index.css" />
     </head>
     <body>
+        <div class="sofa">
+            <!-- <img src="bg.jpg" alt="SOFA"> -->
+        </div>
         <div class="headline-container">
             <div id="text-behind">HAPPY BIRTHDAY<br />SOFIA</div>
             <div id="text-behind-blur">HAPPY BIRTHDAY<br />SOFIA</div>
