--- a/index.html
+++ b/index.html
@@ -6,29 +6,13 @@
         <link rel="stylesheet" href="css/index.css" />
     </head>
     <body>
-        <div class="sofa">
+        <!-- <div class="sofa">
             <!-- <img src="bg.jpg" alt="SOFA"> -->
-        </div>
+        </div> -->
         <div class="headline-container">
             <div id="text-behind">HAPPY BIRTHDAY<br />SOFIA</div>
             <div id="text-behind-blur">HAPPY BIRTHDAY<br />SOFIA</div>
             <div id="text-front">HAPPY BIRTHDAY<br />SOFIA</div>
-        </div>
-
-        <div class="canvas-container">
-            <canvas id="canvas"></canvas>
-        </div>
-
-        <div class="more-content"></div>
-
-        <div class="text-container">
-            <div class="title">
-                <!-- <a href="" target="_blank"><p></p></a> -->
-                <br>
-            </div>
-            <div class="socials">
-                <!-- <a href="menu.html" class="menu_link">MENU</a> -->
-            </div>
         </div>
         <script type="module" src="js/frontal.js"></script>
     </body>
